Fix typo in property name

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -46,7 +46,7 @@ or in the "license" file accompanying this file. This file is distributed on an 
                       <ul class="rekog-label-list">
                           <b>Detected objects</b>
                           <li class="rekog-label" v-for="face of frame.faces">
-                              {{face.exernal_id}} ({{(Math.round((face.confidence + 0.00001) * 100) / 100) + "%"}})
+                              {{face.external_id}} ({{(Math.round((face.confidence + 0.00001) * 100) / 100) + "%"}})
                           </li>
                       </ul> 
                   </span>
