Update objects to people

--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -26,7 +26,7 @@ or in the "license" file accompanying this file. This file is distributed on an 
 
 <body>
     <div id="app">
-    
+
     <div class="header">
         <h1><img class="logo" src="logo.png" alt="Logo">Amazon Rekognition Video Analyzer</h1>
     </div>
@@ -35,8 +35,8 @@ or in the "license" file accompanying this file. This file is distributed on an 
       <div class="inner-grid-list">
         <span v-if="enrichedframes && enrichedframes.length">
           <div v-for="frame of enrichedframes" class="inner-grid">
-              <div class="container-img"> 
-                <img class="frame-image" v-bind:src="frame.s3_presigned_url" alt="Video Frame Here" /> 
+              <div class="container-img">
+                <img class="frame-image" v-bind:src="frame.s3_presigned_url" alt="Video Frame Here" />
               </div>
               <div class="container">
                 <div>
@@ -44,11 +44,11 @@ or in the "license" file accompanying this file. This file is distributed on an 
                   <br/>
                   <span>
                       <ul class="rekog-label-list">
-                          <b>Detected objects</b>
+                          <b>Detected people</b>
                           <li class="rekog-label" v-for="face of frame.faces">
                               {{face.external_id}} ({{(Math.round((face.confidence + 0.00001) * 100) / 100) + "%"}})
                           </li>
-                      </ul> 
+                      </ul>
                   </span>
                 </div>
               </div>
@@ -58,9 +58,9 @@ or in the "license" file accompanying this file. This file is distributed on an 
       <div>
         <h2>Settings</h2>
         <div class="load">
-            
+
             <div>Autoload</div>
-            <div> 
+            <div>
               <label class="switch">
                 <input type="checkbox" v-on:click="toggleFetchFrames" :checked="autoload">
                 <div class="slider round"></div>
